<resources>
    <string name="app_name">Final Grade</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_semesters">Semestres</string>
    <string name="menu_courses">Cursos</string>

    <string name="home_second">Home Second</string>

    <string name="database_name">final_grade_database</string>

    <!-- TITLES -->
    <string name="title_add_semester">Agregar Semestre</string>
    <string name="title_add_course">Agregar Curso</string>

    <!-- LABELS -->
    <string name="label_name_semester">Nombre Semestre</string>
    <string name="label_description_semester">Descripción Semestre</string>
    <string name="label_year_semester">Año Semestre</string>
    <string name="label_current_semester">Semestre Actual</string>

    <string name="label_name_course">Nombre Curso</string>
    <string name="label_description_course">Descripción Curso</string>
    <string name="label_name_teacher">Nombre Docente</string>

    <!-- BUTTONS -->
    <string name="button_cancel">Cancelar</string>
    <string name="button_save">Guardar</string>

    <!-- DEFAULT VALUES -->
    <string name="title_default">Title Default</string>
    <string name="description_default">Description Default</string>
    <string name="year_default">2020</string>

</resources>
